[tool.poetry]
name = "csv-processor-v1"
version = "0.1.0"
description = ""
authors = ["Nishant Prakash <nishant.prakash@hp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
